--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,7 +9,7 @@ vscode:
     - vscjava.vscode-java-test
     - vscjava.vscode-spring-initializr
     - vscjava.vscode-spring-boot-dashboard
-    - tomoki1207.pdf
+    - anwar.papyrus-pdf
 
 # Commands to run on start
 tasks:
